Add calculation engine and chain length calculator

--- a/velowrench.Core/velowrench.Core.csproj
+++ b/velowrench.Core/velowrench.Core.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\velowrench.Calculations\velowrench.Calculations.csproj" />
+  </ItemGroup>
+
 </Project>
