--- a/velowrench.UI/velowrench.UI.csproj
+++ b/velowrench.UI/velowrench.UI.csproj
@@ -44,5 +44,9 @@
       <DependentUpon>HomeView.axaml</DependentUpon>
     </Compile>
   </ItemGroup>
+	
+  <ItemGroup>
+    <Folder Include="Controls\" />
+  </ItemGroup>
 
 </Project>
