--- a/velowrench.Shell.Android/velowrench.Shell.Android.csproj
+++ b/velowrench.Shell.Android/velowrench.Shell.Android.csproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <PackageReference Include="Avalonia.Android" />
+    <PackageReference Include="Microsoft.Extensions.Logging" />
     <PackageReference Include="Xamarin.AndroidX.Core.SplashScreen" />
   </ItemGroup>
 
