add unit conversion and unit user controls

--- a/velowrench.Core/velowrench.Core.csproj
+++ b/velowrench.Core/velowrench.Core.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Avalonia.Fonts.Inter" />
     <PackageReference Include="CommunityToolkit.Mvvm" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+    <PackageReference Include="UnitsNet" />
   </ItemGroup>
 
   <ItemGroup>
