--- a/velowrench.Calculations/.editorconfig
+++ b/velowrench.Calculations/.editorconfig
@@ -267,3 +267,4 @@ indent_size = 4
 end_of_line = crlf
 dotnet_style_namespace_match_folder = true:suggestion
 dotnet_diagnostic.CA1822.severity = none
+dotnet_diagnostic.CA1707.severity = none
