Add calculation state handling and UI feedback for chain length calculator

--- a/velowrench.Core/velowrench.Core.csproj
+++ b/velowrench.Core/velowrench.Core.csproj
@@ -19,4 +19,12 @@
     <ProjectReference Include="..\velowrench.Calculations\velowrench.Calculations.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EditorConfigFiles Remove="C:\Workspaces\velowrench\velowrench.Core\.editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="C:\Workspaces\velowrench\velowrench.Core\.editorconfig" />
+  </ItemGroup>
+
 </Project>
