--- a/velowrench.Shell.iOS/velowrench.Shell.iOS.csproj
+++ b/velowrench.Shell.iOS/velowrench.Shell.iOS.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Avalonia.iOS" />
+    <PackageReference Include="Microsoft.Extensions.Logging" />
   </ItemGroup>
 
   <ItemGroup>
