--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -7,6 +7,7 @@
     <!-- Avalonia packages -->
     <!-- Important: keep version in sync! -->
     <PackageVersion Include="Avalonia" Version="11.3.3" />
+    <PackageVersion Include="Avalonia.Controls.DataGrid" Version="11.3.3" />
     <PackageVersion Include="Avalonia.ReactiveUI" Version="11.3.3" />
     <PackageVersion Include="Avalonia.Themes.Fluent" Version="11.3.3" />
     <PackageVersion Include="Avalonia.Fonts.Inter" Version="11.3.3" />
@@ -27,6 +28,7 @@
     <PackageVersion Include="NLog" Version="6.0.2" />
     <PackageVersion Include="NLog.Extensions.Logging" Version="6.0.2" />
     <PackageVersion Include="Semi.Avalonia" Version="11.2.1.9" />
+    <PackageVersion Include="Semi.Avalonia.DataGrid" Version="11.2.1.9" />
     <PackageVersion Include="Serilog" Version="4.3.0" />
     <PackageVersion Include="Serilog.Extensions.Logging" Version="9.0.2" />
     <PackageVersion Include="UnitsNet" Version="5.75.0" />
