Refactor gear ratio naming to gear calculator and update structure

--- a/velowrench.UI/velowrench.UI.csproj
+++ b/velowrench.UI/velowrench.UI.csproj
@@ -49,8 +49,8 @@
     <Compile Update="Views\Home\HomeView.axaml.cs">
       <DependentUpon>HomeView.axaml</DependentUpon>
     </Compile>
-    <Compile Update="Views\Tools\GearRatioCalculatorView.axaml.cs">
-      <DependentUpon>GearRatioCalculatorView.axaml</DependentUpon>
+    <Compile Update="Views\Tools\GearCalculatorView.axaml.cs">
+      <DependentUpon>GearCalculatorView.axaml</DependentUpon>
     </Compile>
   </ItemGroup>
 
