--- a/velowrench.Core/.editorconfig
+++ b/velowrench.Core/.editorconfig
@@ -269,3 +269,4 @@ dotnet_style_prefer_collection_expression = when_types_loosely_match:suggestion
 dotnet_style_namespace_match_folder = true:suggestion
 dotnet_diagnostic.CA1056.severity = none
 dotnet_diagnostic.CA1000.severity = none
+dotnet_diagnostic.CA1822.severity = none
