--- a/velowrench.Core/.editorconfig
+++ b/velowrench.Core/.editorconfig
@@ -270,3 +270,4 @@ dotnet_style_namespace_match_folder = true:suggestion
 dotnet_diagnostic.CA1056.severity = none
 dotnet_diagnostic.CA1000.severity = none
 dotnet_diagnostic.CA1822.severity = none
+dotnet_diagnostic.CA1707.severity = none
