--- a/velowrench.Calculations/.editorconfig
+++ b/velowrench.Calculations/.editorconfig
@@ -269,3 +269,4 @@ end_of_line = crlf
 dotnet_style_namespace_match_folder = true:suggestion
 dotnet_diagnostic.CA1822.severity = none
 dotnet_diagnostic.CA1707.severity = none
+dotnet_diagnostic.CA1000.severity = none
