--- a/velowrench.Calculations/velowrench.Calculations.csproj
+++ b/velowrench.Calculations/velowrench.Calculations.csproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
+    <PackageReference Include="UnitsNet" />
   </ItemGroup>
 
 </Project>
