Implement spoke length calculator and validation

--- a/velowrench.Core.Tests/velowrench.Core.Tests.csproj
+++ b/velowrench.Core.Tests/velowrench.Core.Tests.csproj
@@ -11,6 +11,10 @@
     <TestingPlatformShowTestsFailure>true</TestingPlatformShowTestsFailure>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="..\velowrench.Core\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
 	<ItemGroup>
 		<PackageReference Include="FakeItEasy" />
 		<PackageReference Include="FluentAssertions" />
