creating a control that renders LaTeX as a bitmap

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -18,6 +18,7 @@
     <PackageVersion Include="Avalonia.Android" Version="11.3.3" />
     <PackageVersion Include="AvaloniaMath" Version="2.1.0" />
     <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageVersion Include="CSharpMath.SkiaSharp" Version="0.5.1" />
     <PackageVersion Include="FakeItEasy" Version="8.3.0" />
     <PackageVersion Include="FluentAssertions" Version="8.5.0" />
     <PackageVersion Include="Material.Icons.Avalonia" Version="2.4.1" />
