--- a/velowrench.Core/velowrench.Core.csproj
+++ b/velowrench.Core/velowrench.Core.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Avalonia.Diagnostics" />
     <PackageReference Include="Avalonia.Fonts.Inter" />
     <PackageReference Include="CommunityToolkit.Mvvm" />
+    <PackageReference Include="CSharpMath.SkiaSharp" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
   </ItemGroup>
 
