--- a/velowrench.Core/.editorconfig
+++ b/velowrench.Core/.editorconfig
@@ -20,6 +20,7 @@ csharp_style_expression_bodied_accessors = true:silent
 csharp_style_expression_bodied_lambdas = true:silent
 csharp_style_expression_bodied_local_functions = false:silent
 dotnet_diagnostic.CA1812.severity = none
+dotnet_diagnostic.MVVMTK0034.severity = none
 
 [*.{cs,vb}]
 #### Naming styles ####
