save and load user preferences

--- a/velowrench.Calculations.Tests/velowrench.Calculations.Tests.csproj
+++ b/velowrench.Calculations.Tests/velowrench.Calculations.Tests.csproj
@@ -12,6 +12,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\velowrench.Calculations\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FakeItEasy" />
     <PackageReference Include="FluentAssertions" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
