--- a/velowrench.Shell.Android/velowrench.Shell.Android.csproj
+++ b/velowrench.Shell.Android/velowrench.Shell.Android.csproj
@@ -1,8 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net9.0-android</TargetFramework>
 		<SupportedOSPlatformVersion>21</SupportedOSPlatformVersion>
+		<TargetFramework>net9.0-android35.0</TargetFramework>
+		<UseAndroidX>true</UseAndroidX>
 		<Nullable>enable</Nullable>
 		<ApplicationId>com.CompanyName.velowrench</ApplicationId>
 		<ApplicationVersion>1</ApplicationVersion>
